Bug 292495 - keditbookmarks isnt importing mozilla firefox bookmarks
Summary: keditbookmarks isnt importing mozilla firefox bookmarks
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.11.3
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 318230 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-26 18:46 UTC by
Modified: 2013-11-10 16:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-01-26 18:46:01 UTC
Version:           1.0 (using Devel) 
OS:                Linux

keditbookmarks isnt importing mozilla bookmarks correctly, i have tried to import all mozilla firefox bookmarks from ~/-mozilla//firefox/dmswej1f.default/bookmarks.html  and it only has imported part of the bookmarks.

Doesnt matter if i choose to repalce konqueror bookmarks or to save them in a new folder, it simply doesnt import all mozilla firefox bookmarks.

Reproducible: Always

Steps to Reproduce:
already described

Actual Results:  
Only imports part of the mozilla firefox bookmarks

Expected Results:  
It should import all bookmarks available from the file firefox file ~/-mozilla//firefox/dmswej1f.default/bookmarks.html 

OS: Linux (x86_64) release 3.2.1-2.1-desktop
Compiler: gcc
Comment 1 Andrea Scarpino 2013-11-05 15:42:35 UTC
*** Bug 318230 has been marked as a duplicate of this bug. ***
Comment 2 Andrea Scarpino 2013-11-05 16:08:07 UTC
The problem resides in the parser in kdelibs/kio/bookmarks/kbookmarkimporter_ns.cc
Comment 3 Andrea Scarpino 2013-11-05 16:38:31 UTC
I fixed the import on my system by editing the HTML file and moving, in the line "<HR>    <DT><H3", the <DT> part on a new line.
The <HR> is a separator so KNSBookmarkImporterImpl skip the line when it reads a line starting with <HR>.
Comment 4 Dawit Alemayehu 2013-11-10 14:51:39 UTC
Fix is up for review: https://git.reviewboard.kde.org/r/113785/
Comment 5 Dawit Alemayehu 2013-11-10 16:59:58 UTC
Git commit 7c8a3817329a679eafdd7e89d2cd4cfeaf9464ab by Dawit Alemayehu.
Committed on 10/11/2013 at 14:33.
Pushed by adawit into branch 'KDE/4.11'.

Fixed Mozilla bookmark import
REVIEW: 113785
FIXED-IN: 4.11.4

M  +11   -3    kio/bookmarks/kbookmarkimporter_ns.cc

http://commits.kde.org/kdelibs/7c8a3817329a679eafdd7e89d2cd4cfeaf9464ab