Fixed Mozilla bookmark import

BUG: 292495
REVIEW: 113785
FIXED-IN: 4.11.4